<resources>
    <string name="app_name">Ref Delegate</string>
    <string name="map_api_key">AIzaSyDWL4T8WERSHrXQ464jk8pKQf_0WLiDbgE</string>
    <string name="search_key">AIzaSyDWL4T8WERSHrXQ464jk8pKQf_0WLiDbgE</string>
    <string name="field_req">Field required</string>
    <string name="login">Login</string>
    <string name="code">Code</string>
    <string name="user_phone">User Phone</string>
    <string name="are_you_have_account">Are You Have Account ?</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate this App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="cannot_signup">Can Not Signup Without Accept Terms And Conditions</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy Policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ch_skill">Choose Skills</string>
    <string name="type_a_message">Type a message...</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="just_now">Just Now</string>
    <string name="invite">Invite</string>
    <string name="back">Back</string>
    <string name="refuse">Refuse</string>
    <string name="no_requests">No requests</string>
    <string name="req_refused">Your request refused</string>
    <string name="req_accepted">Your request accepted</string>
    <string name="no_conversation">No conversation</string>
    <string name="choose_language">Choose Language</string>
    <string name="next">next</string>
    <string name="year_of_birth">Year of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="choose_year">Choose year</string>
    <string name="ok2">OK</string>
    <string name="done">done</string>
    <string name="verify">verify</string>
    <string name="language_settings">Language Settings</string>
    <string name="country_code">Country code</string>
    <string name="code_verification">Code verification</string>
    <string name="enter_code_sent_to">Enter code sent to</string>
    <string name="name">name</string>
    <string name="phone_number">phone number</string>
    <string name="resend_in">Resend in</string>
    <string name="resend">Resend</string>
    <string name="banner_image">banner image</string>
    <string name="profile_image">profile image</string>
    <string name="store">store</string>
    <string name="add">add</string>
    <string name="comments">Comments</string>
    <string name="orders">orders</string>
    <string name="add_comment">Add Comment</string>
    <string name="replay">Replay</string>
    <string name="add_replay">Add Replay</string>
    <string name="my_posts">My Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="help">Help</string>
    <string name="version_no">Version Number</string>
    <string name="the_ingredients">The Ingredients</string>
    <string name="specifications">Specifications</string>
    <string name="weight">Weight</string>
    <string name="colorss">Color</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="quantity">Quantity</string>
    <string name="cart">Cart</string>
    <string name="total">Total :</string>
    <string name="add_post">Add Post</string>
    <string name="post">post</string>
    <string name="add_place">Add Place</string>
    <string name="add_thing">Write something about this picture</string>
    <string name="notification_tone">Notification Tone</string>
    <string name="default1">Default</string>
    <string name="places">Places</string>
    <string name="pay">Pay</string>
    <string name="type_message">Type message</string>
    <string name="light">: Light</string>
    <string name="g">: 20 g</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="address">Address</string>
    <string name="offers">Offers</string>
    <string name="meal_title">Fried Chicken</string>
    <string name="meal_description">Fried chicken very good and nice fried chicken very good and nice</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="add_offer">Add Offer</string>
    <string name="offer_images">Offer Images</string>
    <string name="offer_name">Offer Name</string>
    <string name="offer_description">Offer Description</string>
    <string name="department">Department</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="not_found">Not Found</string>
    <string name="found">Found</string>
    <string name="discount_percentage">Discount Percentage</string>
    <string name="price_after_discount">Price After Discount</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="_200">200 SAR</string>
    <string name="details">Details</string>
    <string name="user_name_test">Ahmed Elmoselhy</string>
    <string name="order_details">Order Details</string>
    <string name="there_is_new_notification">There is new notification</string>
    <string name="expire_date">Expire date:</string>
    <string name="before_discount">Before</string>
    <string name="after_discount">After</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="product_update">Product update</string>
    <string name="download_customer_app">Download customer app</string>
    <string name="download_delegate_app">Download Delegate app</string>
    <string name="time">Time</string>
    <string name="cash">Cash</string>
    <string name="payment">Payment :</string>
    <string name="order_accepted">Order accepted</string>
    <string name="order_id">Order id</string>
    <string name="order_will_be_ready">Order will be ready</string>
    <string name="delegate_make_order_ready">Delegate make order ready</string>
    <string name="the_request_is_being_submitted">The request is being submitted</string>
    <string name="we_deliver_your_request_to_a_delegate">We deliver your request to a delegate</string>
    <string name="the_delivery_was_successful">The delivery was successful</string>
    <string name="order_steps">Order steps</string>
    <string name="payment_1">Payment</string>
    <string name="name_on_card_optional">Name on card(optional)</string>
    <string name="mm">MM</string>
    <string name="card_number">Card number</string>
    <string name="yy">YY</string>
    <string name="refuse_reasons">Refuse Reasons</string>
    <string name="vacation">Vacation</string>
    <string name="short_time">Short Time</string>
    <string name="quantity_not_available">Quantity not available</string>
    <string name="another_reason">Another reason</string>
    <string name="refuse_confirm">Refuse Confirm</string>
    <string name="update_confirm">Update Confirm</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_1">Profile</string>
    <string name="delivery_is_within_an_hour">Delivery is within an hour</string>
    <string name="delivery_price">Delivery price :</string>
    <string name="download_family_app">Download Family App</string>
    <string name="nationality">Nationality</string>
    <string name="national_identity_number">National Identity Number</string>
    <string name="identity_card_image">Identity Card Image</string>
    <string name="bank_account_number_24_digit">Bank Account Number (24 digit)</string>
    <string name="address_of_account_owner">Address of account owner</string>
    <string name="car_type">Car Type</string>
    <string name="car_model">Car model</string>
    <string name="manufacturing_year">Manufacturing year</string>
    <string name="driving_license">Driving license</string>
    <string name="car_image_from_front">Car image from front</string>
    <string name="car_image_from_back">Car image from back</string>
    <string name="i_acknowledge_that_i_have_read_the_aforementioned_conditions_and_agree_to_them_completely">I acknowledge that I have read the aforementioned conditions and agree to them completely</string>
    <string name="something">Check internet connection</string>
    <string name="sar">SAR</string>
    <string name="account_number">Account Number</string>
    <string name="ipan_number">IPan Number</string>
    <string name="user_found">User Found</string>
    <string name="ipan_number_length_error">Must be 22 Number</string>
    <string name="no_data_to_view">No data to View</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="view_status">View Status</string>
    <string name="ch_logo">Choose Logo</string>
    <string name="ch_national_image">Choose National Image</string>
    <string name="ch_licence">Choose Licence Image</string>
    <string name="ch_car">Chhose Back Car Image</string>
    <string name="ch_fr">Chhose Front Car Image</string>
    <string name="accept_terms">Accept Terms And Conditions</string>
    <string name="new_orders">New Orders</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="hours_num">Hours Num :</string>
    <string name="compiled">Compiled</string>
    <string name="received">Received</string>
    <string name="sent_delivered_handed">sent delivered handed</string>
    <string name="suc">success</string>
    <string name="buy">Buy</string>
    <string name="canceled">Canceled</string>
    <string name="Previous">Back</string>
    <string name="Next">Next</string>
    <string name="you_must_subscribe_to_get_orders">You Must Subscribe To Get Orders</string>
    <string name="ch_car_type">Choose Car Type</string>
    <string name="Choose">choose</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="getting_location">Getting Location...</string>
    <string name="distance_between_me_and_the_shipping_site">distance  me and  shipping :</string>
    <string name="the_distance_between_me_and_the_delivery_site">distance  me and  delivery : </string>
    <string name="km">Km</string>
    <string name="contact_us">Contact Us</string>
    <string name="users_feedback">Users Feedback</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="contactus">ContactUs</string>
    <string name="no_feedback_to_show">No Feedback to show</string>
    <string name="show_phone_number">Show Phone Number</string>
    <string name="send">send</string>
    <string name="balance">Balance</string>
</resources>